force-app/main/default/objects/EBT_Revenue_Summary__c/EBT_Revenue_Summary__c.object-meta.xml
<CustomObject>
    <label>EBT Revenue Summary</label>
    <nameField>
        <displayFormat>EBTR-{00000}</displayFormat>
        <label>EBT NCR Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBT Revenue Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>