force-app/main/default/objects/EBT_Revenue_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBT Revenue Summary</relationshipLabel>
    <relationshipName>EBT_Revenue_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>