force-app/main/default/objects/EBT_Revenue_Summary__c/fields/Est_Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Est_Wallet_Share__c</fullName>
    <label>Est. % Wallet Share</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>