force-app/main/default/objects/EBT_Revenue_Summary__c/fields/Executive_Briefing__c.field-meta.xml
<CustomField>
    <fullName>Executive_Briefing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Briefing</label>
    <referenceTo>Executive_Briefing__c</referenceTo>
    <relationshipLabel>EBT Revenue Summary</relationshipLabel>
    <relationshipName>EBT_Revenue_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>